--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.google.firebase:firebase-database:16.0.5'
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.android.support:design:28.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
